# skytest

./: .bazelrc  .clang-tidy  .common.bazelrc  BUILD.bazel  LICENSE  MODULE.bazel  README.md  README.md.tmpl  WORKSPACE.bazel  repositories.bzl  skytest.hpp
.github/: codecov.yml
.github/actions/ci-env-setup/: action.yml
.github/workflows/: check.yml  ci.bazelrc
example/: BUILD.bazel  aborts.cpp  additional_output.cpp  binary_comparisons.cpp  constexpr_params_parameterized.cpp  ctest_fail.cpp  ctest_fail.sh.tmpl  described_predicates.cpp  described_predicates_20.cpp  logical_operations.cpp  minimal_fail.cpp  minimal_pass.cpp  param_parameterized.cpp  param_ref_parameterized.cpp  skytest.hpp  type_parameterized.cpp  user_defined_predicates.cpp  value_parameterized.cpp
rules/: BUILD.bazel  binary_log.bzl  copy_to_workspace.bash  incompatible.bzl  lcov.bzl  prelude.sh.tmpl  sh_binary_template.bzl  skytest_compile_error_test.bzl  skytest_test.bzl
scripts/: BUILD.bazel  README.md.tmpl  markdown-update.py
src/: aborts.hpp  cfg.hpp  default_printer.hpp  expect.hpp  optional.hpp  pred.hpp  result.hpp  rope.hpp  runner.hpp  source_location.hpp  string_view.hpp  test.hpp  test_param.hpp  utility.hpp  version.hpp
src/backport/: optional.hpp  string_view.hpp
src/detail/: arg_fmt.hpp  as_const.hpp  conjunction.hpp  is_defined.hpp  is_range.hpp  is_specialization_of.hpp  predicate.hpp  priority.hpp  relation.hpp  remove_cvref.hpp  static_closure.hpp  test_style.hpp  trim_substring.hpp  tuple_fmt.hpp  type_name.hpp  void_t.hpp
test/: BUILD.bazel  aborts_test.cpp  aborts_with_failed_fork_test.cpp  arg_fmt_test.cpp  comparison_test.cpp  composable_test.cpp  constexpr_runtime_diverge_test.cpp  constexpr_test.cpp  cpp14_test.cpp  ctest_build_failure.cpp  ctest_build_failure.sh.tmpl  expect_message_test.cpp  fail_test.cpp  failing_fork.cpp  literal_type_parameterized_test.cpp  multiple_pass_test.cpp  no_malloc.cpp  noreturn_expect.cpp  noreturn_expect.sh.tmpl  null_printer_test.cpp  pass_test.cpp  pred_notation_test.cpp  pred_test.cpp  prelude.sh.tmpl  requires_constexpr_test.cpp  type_parameterized_test.cpp  value_parameterized_test.cpp
toolchain/: BUILD.bazel
tools/: BUILD.bazel  llvm_toolchain.bzl  local_config_info.bzl
