load("@rules_cc//cc:defs.bzl", "cc_library")

package(default_visibility = ["//:__subpackages__"])

filegroup(
    name = "format_config",
    srcs = [".clang-format"],
)

filegroup(
    name = "tidy_config",
    srcs = [".clang-tidy"],
)

cc_library(
    name = "skytest",
    srcs = [
        "src/aborts.hpp",
        "src/cfg.hpp",
        "src/default_printer.hpp",
        "src/detail/is_defined.hpp",
        "src/detail/is_specialization_of.hpp",
        "src/detail/predicate.hpp",
        "src/detail/priority.hpp",
        "src/detail/relation.hpp",
        "src/detail/remove_cvref.hpp",
        "src/detail/trim_substring.hpp",
        "src/detail/tuple_fmt.hpp",
        "src/detail/type_name.hpp",
        "src/expect.hpp",
        "src/pred.hpp",
        "src/result.hpp",
        "src/rope.hpp",
        "src/runner.hpp",
        "src/source_location.hpp",
        "src/test.hpp",
        "src/test_param.hpp",
        "src/utility.hpp",
        "src/version.hpp",
    ],
    hdrs = ["skytest.hpp"],
    include_prefix = "skytest",
    visibility = ["//visibility:public"],
)
