workspace(name = "skytest")

load("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

CXX_STANDARD = ["-std=c++17"]

COMMON_CXX_WARNINGS = [
    "-Werror",
    "-Wall",
    "-Wextra",
    "-Wpedantic",
    "-Wconversion",
    "-Wnon-virtual-dtor",
    "-Wold-style-cast",
    "-Wcast-align",
    "-Wunused",
    "-Woverloaded-virtual",
    "-Wmisleading-indentation",
    "-Wnull-dereference",
    "-Wdouble-promotion",
    "-Wformat=2",
    "-Wimplicit-fallthrough",
]

# `@rules_cc` depends on `com_google_protobuf`
http_archive(
    name = "com_google_protobuf",
    integrity = "sha256-K2lcservjhc/iEI17m1V9XGG6V2J67MTYe5Vy1/RuZY=",
    strip_prefix = "protobuf-31.0",
    urls = [
        "https://github.com/protocolbuffers/protobuf/archive/v31.0.tar.gz",
    ],
)

load("@com_google_protobuf//:protobuf_deps.bzl", "protobuf_deps")

protobuf_deps()

load("@rules_java//java:rules_java_deps.bzl", "rules_java_dependencies")

rules_java_dependencies()

load("@rules_java//java:repositories.bzl", "rules_java_toolchains")

rules_java_toolchains()

# use a recent version of `@rules_cc` for `@rules_build_error`
http_archive(
    name = "rules_cc",
    sha256 = "712d77868b3152dd618c4d64faaddefcc5965f90f5de6e6dd1d5ddcd0be82d42",
    strip_prefix = "rules_cc-0.1.1",
    urls = ["https://github.com/bazelbuild/rules_cc/releases/download/0.1.1/rules_cc-0.1.1.tar.gz"],
)

TOOLCHAINS_LLVM_COMMIT = "4ab573b1b87a57791ef2f9ccee71cbad80a2abb9"

http_archive(
    name = "toolchains_llvm",
    integrity = "sha256-sCbaVUYAogO0jJ8N8CY4DYNdJLVLV0Z3TiPMKl81f44=",
    strip_prefix = "toolchains_llvm-{commit}".format(
        commit = TOOLCHAINS_LLVM_COMMIT,
    ),
    url = "https://github.com/bazel-contrib/toolchains_llvm/archive/{commit}.tar.gz".format(
        commit = TOOLCHAINS_LLVM_COMMIT,
    ),
)

load("@toolchains_llvm//toolchain:deps.bzl", "bazel_toolchain_dependencies")

bazel_toolchain_dependencies()

load("@toolchains_llvm//toolchain:rules.bzl", "llvm_toolchain")

# https://github.com/bazel-contrib/toolchains_llvm/blob/192cf04bbb11b29a8ca6756e269d27a840bfa14b/toolchain/internal/repo.bzl
llvm_toolchain(
    name = "llvm_toolchain",
    cxx_flags = {
        "": [
            "-D_LIBCPP_HARDENING_MODE=_LIBCPP_HARDENING_MODE_EXTENSIVE",
            "-stdlib=libc++",
            "-Wshadow",
        ] + COMMON_CXX_WARNINGS + CXX_STANDARD,
    },
    # Link UBSan C++ runtime libraries if the `ubsan` feature is enabled
    # https://github.com/bazelbuild/bazel/issues/12797#issuecomment-980641064
    # use `link_libs` to prevent overriding default `link_flags`
    # https://github.com/grailbio/bazel-toolchain/blob/ceeedcc4464322e05fe5b8df3749cc02273ee083/toolchain/cc_toolchain_config.bzl#L148-L150
    link_libs = {
        "": ["-fsanitize-link-c++-runtime"],
    },
    llvm_version = "19.1.0",
)

load("@llvm_toolchain//:toolchains.bzl", "llvm_register_toolchains")

llvm_register_toolchains()

BAZEL_BOOTLIN_COMMIT = "d15e4b4c3a984668d1d6bd5f3ca032efecae5cb1"

http_archive(
    name = "bazel_bootlin",
    integrity = "sha256-kBlWjcV2AXGblkqCNxg1/bs2c6YLrLHqLgSbwsAcCl8=",
    strip_prefix = "bazel_bootlin-{commit}".format(
        commit = BAZEL_BOOTLIN_COMMIT,
    ),
    url = "https://github.com/oliverlee/bazel_bootlin/archive/{commit}.tar.gz".format(
        commit = BAZEL_BOOTLIN_COMMIT,
    ),
)

load("@bazel_bootlin//:defs.bzl", "bootlin_toolchain")

bootlin_toolchain(
    name = "gcc_toolchain",
    # x86-64-v3 should cover CPUs released after ~2015.
    # see https://www.phoronix.com/news/GCC-11-x86-64-Feature-Levels.
    architecture = "x86-64-v3",
    # see https://toolchains.bootlin.com/releases_x86-64-v3.html
    buildroot_version = "bleeding-edge-2023.08-1",
    extra_cxx_flags = [
        "-fdiagnostics-color=always",
        "-Wduplicated-cond",
        "-Wduplicated-branches",
        "-Wlogical-op",
        "-Wuseless-cast",
        "-Wshadow=compatible-local",
    ] + COMMON_CXX_WARNINGS + CXX_STANDARD,
    libc_impl = "glibc",
)

register_toolchains(
    "@gcc_toolchain//:toolchain",
)

BAZEL_CLANG_FORMAT_COMMIT = "ad5f2572518053b36a2d999f7b824fb5a7819ab4"

http_archive(
    name = "bazel_clang_format",
    sha256 = "c31f0ea477dd0da84fc2c694a533797a9d2bf060f8cca8b5ea30402a47a2ea0a",
    strip_prefix = "bazel_clang_format-{commit}".format(
        commit = BAZEL_CLANG_FORMAT_COMMIT,
    ),
    url = "https://github.com/oliverlee/bazel_clang_format/archive/%s.tar.gz" % BAZEL_CLANG_FORMAT_COMMIT,
)

RULES_CLANG_TIDY_COMMIT = "7c7278c9fa91471f7197455bcd8c2d1ffdd0ddeb"

http_archive(
    name = "rules_clang_tidy",
    integrity = "sha256-Lj5bI21yP04iFHRWiLvegD510bCJvbbVIRSTQ5+NA+4=",
    strip_prefix = "rules_clang_tidy-{commit}".format(
        commit = RULES_CLANG_TIDY_COMMIT,
    ),
    url = "https://github.com/oliverlee/rules_clang_tidy/archive/{commit}.tar.gz".format(
        commit = RULES_CLANG_TIDY_COMMIT,
    ),
)

load("@rules_clang_tidy//:dependencies.bzl", "rules_clang_tidy_dependencies")

rules_clang_tidy_dependencies()

http_archive(
    name = "buildifier_prebuilt",
    sha256 = "e46c16180bc49487bfd0f1ffa7345364718c57334fa0b5b67cb5f27eba10f309",
    strip_prefix = "buildifier-prebuilt-6.1.0",
    urls = [
        "https://github.com/keith/buildifier-prebuilt/archive/6.1.0.tar.gz",
    ],
)

load("@buildifier_prebuilt//:deps.bzl", "buildifier_prebuilt_deps")

buildifier_prebuilt_deps()

load("@bazel_skylib//:workspace.bzl", "bazel_skylib_workspace")

bazel_skylib_workspace()

load("@buildifier_prebuilt//:defs.bzl", "buildifier_prebuilt_register_toolchains")

buildifier_prebuilt_register_toolchains()

http_archive(
    name = "lcov",
    build_file_content = """
exports_files(glob(["**/*"]))
""",
    sha256 = "987031ad5528c8a746d4b52b380bc1bffe412de1f2b9c2ba5224995668e3240b",
    strip_prefix = "lcov-1.16",
    url = "https://github.com/linux-test-project/lcov/releases/download/v1.16/lcov-1.16.tar.gz",
)

http_archive(
    name = "rules_python",
    sha256 = "e85ae30de33625a63eca7fc40a94fea845e641888e52f32b6beea91e8b1b2793",
    strip_prefix = "rules_python-0.27.1",
    url = "https://github.com/bazelbuild/rules_python/releases/download/0.27.1/rules_python-0.27.1.tar.gz",
)

load("@rules_python//python:repositories.bzl", "py_repositories", "python_register_toolchains")

py_repositories()

python_register_toolchains(
    name = "python3_11",
    python_version = "3.11",
)

load("@rules_python//python:pip.bzl", "pip_parse")

pip_parse(
    name = "pip",
    python_interpreter_target = "@python3_11_host//:python",
    requirements_lock = "//tools:requirements.lock",
)

load("@pip//:requirements.bzl", "install_deps")

install_deps()

MARKDOWN_EMBED_CODE_COMMIT = "8b81fe2e5585c5e1d14772d8e712ecb7a69c74c8"

http_archive(
    name = "markdown-embed-code",
    build_file_content = """
load("@rules_python//python:defs.bzl", "py_library")
load("@pip//:requirements.bzl", "requirement")

py_library(
    name = "markdown-embed-code",
    srcs = ["markdown_embed_code/__init__.py"],
    imports = ["."],
    deps = [requirement("marko")],
    visibility = ["//visibility:public"],
)
""",
    sha256 = "a7ebe1beb55e24e0f6a7700f287da561b459055fc1c70729291c14ae8118fd1d",
    strip_prefix = "markdown-embed-code-{commit}".format(
        commit = MARKDOWN_EMBED_CODE_COMMIT,
    ),
    url = "https://github.com/tokusumi/markdown-embed-code/archive/{commit}.tar.gz".format(
        commit = MARKDOWN_EMBED_CODE_COMMIT,
    ),
)

load("//tools:local_config_info.bzl", "local_config_info")

local_config_info(name = "local_config_info")

RULES_BUILD_ERROR_COMMIT = "4ea1a4fa702b16389c7eb3b695ef97a23dfe9330"

http_archive(
    name = "rules_build_error",
    sha256 = "db4363c0346b1e12a58d32e6c9d8b7036fcb0655a2a6391d21a6f13b8bfaed1a",
    strip_prefix = "rules_build_error-{commit}".format(
        commit = RULES_BUILD_ERROR_COMMIT,
    ),
    url = "https://github.com/yuyawk/rules_build_error/archive/{commit}.tar.gz".format(
        commit = RULES_BUILD_ERROR_COMMIT,
    ),
)

http_archive(
    name = "rules_multirun",
    sha256 = "0e124567fa85287874eff33a791c3bbdcc5343329a56faa828ef624380d4607c",
    url = "https://github.com/keith/rules_multirun/releases/download/0.9.0/rules_multirun.0.9.0.tar.gz",
)
