load("@rules_python//python:defs.bzl", "py_binary")
load("@bazel_skylib//rules:diff_test.bzl", "diff_test")

py_binary(
    name = "markdown-update",
    srcs = ["markdown-update.py"],
    visibility = ["//visibility:private"],
    deps = ["@markdown-embed-code"],
)

genrule(
    name = "gen_readme",
    srcs = ["README.md.tmpl"],
    outs = ["README.md.generated"],
    cmd = """
$(execpath :markdown-update) $(rootpath :README.md.tmpl)> $@
""",
    tags = ["manual"],
    tools = [
        ":markdown-update",
        "//example:all_files",
    ],
    visibility = ["//visibility:private"],
)

sh_binary(
    name = "readme.update",
    srcs = ["//rules:copy_to_workspace.bash"],
    args = [
        "$(rootpath :gen_readme)",
        "$(rootpath //:README.md)",
    ],
    data = [
        ":gen_readme",
        "//:README.md",
    ],
)

diff_test(
    name = "readme.check",
    failure_message = "To update, run:\n\nbazel run //scripts:readme.update",
    file1 = "//:README.md",
    file2 = "README.md.generated",
)
